# dat-cli

./: README.md  main.py  pyproject.toml
dat_cli/: main.py
dat_cli/templates/: catalog.yml.txt  generator.py.txt  source.py.txt  specs.py.txt  specs.yml.txt
dat_cli/templates/tests/destination/: conftest.py.txt  test_.py.txt
dat_cli/templates/tests/generator/: conftest.py.txt  test_.py.txt
dat_cli/templates/tests/source/: conftest.py.txt  test_.py.txt
