[tool.poetry]
name = "dat-cli"
version = "0.1.0"
description = "Command-line interface for backend database operations."
authors = ["Rijumone Choudhuri <mailmeonriju@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
dat-client = {git = "https://github.com/dat-labs/dat-api-sdk", rev = "main", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
